--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "cross-env": "^5.2.0",
     "eosjs": "^16.0.9",
     "nuxt": "^2.0.0",
-    "scatterjs-core": "^2.3.8",
-    "scatterjs-plugin-eosjs": "^1.3.10",
+    "scatter-js": "2.5.2",
     "vuelidate": "^0.7.4"
   },
   "devDependencies": {
