--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-beta",
     "cross-env": "^5.2.0",
-    "eosjs": "^16.0.9",
+    "eosjs": "16.0.9",
     "nuxt": "^2.0.0",
     "scatter-js": "2.5.2",
     "vuelidate": "^0.7.4"
